--- a/Comp2084-Assignment1/Site.Master
+++ b/Comp2084-Assignment1/Site.Master
@@ -9,7 +9,7 @@
     </asp:ContentPlaceHolder>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="scripts/tether/tether.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <link href="Content/custom.css" rel="stylesheet" />
 </head>
