--- a/Comp2084-Assignment1/Content/custom.css
+++ b/Comp2084-Assignment1/Content/custom.css
@@ -1,8 +1,11 @@
 ﻿header {
-    margin-bottom:40px;
+    margin-bottom: 40px;
 }
 nav {
-    border-radius:0;
+    border-radius: 0;
+}
+.marginBottom {
+    margin-bottom: 30px;
 }
 
 /* Sticky footer styles
